--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,15 @@
   <button id="logout" class="btn-no-style">logout</button>
   <a href="/login">login</a>
 </nav>
-  </header>
+  </header><nav>
+  {{#if loggedIn}}
+  <button id="logout" class="btn-no-style">logout</button>
+  {{else}}
+  <a href="/login">login</a>
+  
+<script src="/javascript/logout.js"></script>
+{{/if}}
+</nav>
     <main>
       {{{ body }}}
     </main>
