add helper functions to handlebars

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,6 +10,7 @@
         {{post.vote_count}} point(s) by {{post.user.username}} on
         {{post.created_at}}
         |
+        {{> post-info post }}
         <a href="/post/{{post.id}}">{{post.comments.length}} comment(s)</a>
       </div>
     </article>
