--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,23 +10,19 @@
 
 <body>
   <div class="wrapper">
-   <header>
-    <h1>
-      <a href="/">Just Tech News</a>
-    </h1>
-     <nav>
-  <button id="logout" class="btn-no-style">logout</button>
-  <a href="/login">login</a>
-</nav>
-  </header><nav>
-  {{#if loggedIn}}
-  <button id="logout" class="btn-no-style">logout</button>
-  {{else}}
-  <a href="/login">login</a>
-  
-<script src="/javascript/logout.js"></script>
-{{/if}}
-</nav>
+    <header>
+      <h1>
+        <a href="/">Just Tech News</a>
+      </h1>
+      <nav>
+        {{#if loggedIn}}
+        <a href="/dashboard">dashboard</a>
+        <button id="logout" class="btn-no-style">logout</button>
+        {{else}}
+        <a href="/login">login</a>
+        {{/if}}
+      </nav>
+    </header>
     <main>
       {{{ body }}}
     </main>
@@ -34,8 +30,10 @@
       Thanks for visiting!
     </footer>
   </div>
-
- <script src="/javascript/logout.js"></script>
+  
+  {{#if loggedIn}}
+  <script src="/javascript/logout.js"></script>
+  {{/if}}
 </body>
 
 </html>
